#1384 fixed form alignment, added flow form requirements before adding segment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,6 +67,12 @@ button:hover{
     margin-bottom:4px;
 }
 
+.center-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .form-control.notloaded {
     border:1px solid #f00;
 }
@@ -75,28 +81,30 @@ button:hover{
     display: flex;
     width: "50%";
 }
-
 .form-row-extremes {
     display: inline-block; 
     width: 100%;
 }
 
-.form-column { 
+.form-column-left {
     flex:1;
-    padding-left:5px;
-    padding-right:5px;
+    padding-right: 5px;
     padding-bottom: 0;
 }
-.form-column-left {
+.form-column-right {
+    flex:1;
+    padding-left: 5px;
+    padding-bottom: 0;
+}
+
+.button-column-left {
     float: left;
-    padding-left:5px;
     padding-right:5px;
     padding-bottom: 0; 
 }
-.form-column-right {
+.button-column-right {
     float: right;
     padding-left:5px;
-    padding-right:5px;
     padding-bottom: 0; 
 }
 
@@ -104,7 +112,6 @@ button:hover{
     display: flex;
     align-items:baseline;
 }
-
 .flow-form-accordion {
    width:78%;
    padding-right:2%;
